--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "dependencies": {
     "@fastify/type-provider-typebox": "^5.2.0",
     "@iamtraction/google-translate": "^2.0.1",
-    "@prisma/client": "^6.14.0",
-    "@types/express": "^5.0.3",
+    "@prisma/client": "^6.19.0",
+    "@sabinelab/players": "^1.1.1",
+    "@types/express": "^5.0.5",
     "body-parser": "^2.2.0",
     "colors": "^1.4.0",
     "enhanced-ms": "^4.1.0",
-    "fastify": "^5.5.0",
-    "mercadopago": "^2.8.0",
+    "fastify": "^5.6.2",
+    "mercadopago": "^2.10.0",
     "moment": "^2.30.1",
     "oceanic-transcripts": "^1.1.1",
-    "oceanic.js": "^1.12.0",
-    "players": "github:SabineBot/players",
-    "stripe": "^18.4.0"
+    "oceanic.js": "^1.13.0",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
-    "@types/node": "^24.3.0",
-    "dotenv": "^17.2.1",
-    "prisma": "^6.14.0",
-    "typescript": "^5.9.2"
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "prisma": "^6.19.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.4"
   },
   "name": "sabine-mod",
   "version": "1.0.0",
@@ -27,8 +30,10 @@
   "scripts": {
     "test": "node --experimental-strip-types --env-file=.env test.ts",
     "start": "node dist/index.js",
-    "dev": "node --watch --experimental-strip-types --env-file=.env src/index.ts",
-    "build": "rm -rf dist && tsc"
+    "dev": "node --watch src/index.ts",
+    "build": "pnpm lint && rm -rf dist && tsc",
+    "lint": "eslint",
+    "check-types": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
