--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,33 +9,8 @@ on:
       - 'README*'
       - 'LICENSE'
 jobs:
-  build-and-push:
-    name: 'Build and Push to Registry'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.NPM_AUTH_TOKEN }}
-
-      - name: Build and push Docker image
-        env:
-          GITHUB_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-        run: |
-          docker build \
-            --build-arg GITHUB_AUTH_TOKEN=${GITHUB_AUTH_TOKEN} \
-            -t ghcr.io/sabinelab/sabine-core:latest \
-            .
-          docker push ghcr.io/sabinelab/sabine-core:latest
-
   deploy:
     name: 'Deploy to Production'
-    needs: build-and-push
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
@@ -57,13 +32,6 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SSH_HOST: ${{ secrets.HOST }}
           SSH_PORT: 22
-          
-      - name: Pull image and restart service
-        env:
-          GH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-          GH_USER: ${{ github.actor }}
+      - name: update sabine core
         run: |
-          ssh prod "echo $GH_TOKEN | docker login ghcr.io -u $GH_USER --password-stdin && \
-          cd sabine/core && \
-          docker pull ghcr.io/sabinelab/sabine-core:latest && \
-          docker compose up -d"
+          ssh prod 'cd sabine/core && git pull && docker compose up -d --build'
