--- a/package.json
+++ b/package.json
@@ -4,27 +4,24 @@
     "@iamtraction/google-translate": "2.0.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "7.2.0",
-    "@sabinelab/players": "1.3.6",
+    "@sabinelab/players": "1.6.3",
     "@types/express": "5.0.6",
-    "body-parser": "2.2.1",
+    "body-parser": "2.2.2",
     "colors": "1.4.0",
-    "discord-html-transcripts": "~3.2.0",
-    "enhanced-ms": "4.1.0",
-    "fastify": "5.6.2",
-    "mercadopago": "2.11.0",
+    "discord-html-transcripts": "~3.3.0",
+    "enhanced-ms": "4.2.0",
+    "fastify": "5.7.1",
+    "mercadopago": "2.12.0",
     "moment": "2.30.1",
-    "stripe": "20.1.0"
+    "stripe": "20.1.2"
   },
   "devDependencies": {
-    "@eslint/js": "9.39.2",
-    "@types/bun": "1.3.4",
-    "@typescript/native-preview": "7.0.0-dev.20251217.1",
+    "@biomejs/biome": "2.3.11",
+    "@types/bun": "1.3.6",
+    "@typescript/native-preview": "7.0.0-dev.20260116.1",
     "discord.js": "14.25.1",
-    "eslint": "9.39.2",
-    "globals": "16.5.0",
     "prisma": "7.2.0",
-    "typescript": "5.9.3",
-    "typescript-eslint": "8.50.0"
+    "typescript": "5.9.3"
   },
   "name": "sabine-core",
   "version": "1.0.0",
@@ -35,7 +32,7 @@
     "dev": "bun --watch src/index.ts",
     "build": "eslint && tsgo",
     "lint": "eslint",
-    "type-check": "tsgo",
+    "check": "tsgo",
     "gen": "bunx --bun prisma generate"
   },
   "keywords": [],
