feat(biome): introduce biome configuration file and update linting process
- Added a new `biome.json` configuration file to manage project settings for linting and formatting.
- Replaced ESLint with Biome for linting, updating the `lint` script in `package.json`.
- Made minor adjustments to TypeScript and database-related files for consistency and clarity.
- Updated imports in various command files to use the new UserSchema and GuildSchema.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start": "bun src/index.ts",
     "dev": "bun --watch src/index.ts",
     "build": "eslint && tsgo",
-    "lint": "eslint",
+    "lint": "biome check",
     "check": "tsgo",
     "gen": "bunx --bun prisma generate"
   },
