--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "bun test.ts",
     "start": "bun src/index.ts",
     "dev": "bun --watch src/index.ts",
-    "build": "eslint && tsgo",
+    "build": "bun lint && tsgo",
     "lint": "biome check",
     "check": "tsgo",
     "gen": "bunx --bun prisma generate"
